# ecommerce

./: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
geektech/: admin.py  apps.py  backends.py  form.py  forms.py  models.py  tests.py  urls.py  views.py
geektech/migrations/: 0001_initial.py  0002_panier.py  0003_commande.py
geektech/static/style/: PageDescription.css  PageDescriptions.css  about.css  card.css  cardProd.css  cardProduit.css  cards.css  cart.css  carts.css  command.css  commandClient.css  commande.css  commandes.css  commands.css  compHeader.css  contact.css  contactUs.css  contacts.css  descrip.css  descriptionD.css  descriptions.css  detail.css  detailDescription.css  detailPage.css  detailPages.css  detailPd.css  detailProd.css  detaild.css  detailprod.css  detailprods.css  detailproduit.css  detailproduits.css  detailps.css  details.css  foot.css  footer.css  footerPage.css  footers.css  glob.css  global.css  (+28 more)
geektech/templates/: _base.html
geektech/templates/admin_page/: addProduct.html  ajout.html  commandes.html  dashboard.html  detail_commande.html  produits.html  updateProd.html
geektech/templates/components/: footer.html  header.html  nav_admin.html
geektech/templates/geektech/: home.html
geektech/templates/page/: accesoir.html  bureautique.html  commande.html  (+14 more)
geektech/tests/: test_view.py
media/images/: 1591519.avif  casque_sony_UtD7F9v.jfif  son.webp.crdownload  téléchargement_1.jfif
server/: settings.py  urls.py
uploads/: FXNGglAWYAMIH7M.jfif  téléchargement.jfif
(+23 files in other folders)
