[tool.poetry]
name = "geek-commerce"
version = "0.1.0"
description = ""
authors = ["Dar_rius <mohamedtine17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.2"
asgiref = "^3.5.2"
binaryornot = "^0.4.4"
certifi = "^2022.6.15"
cffi = "^1.15.1"
chardet = "^5.0.0"
charset-normalizer = "^2.1.0"
click = "^8.1.3"
colorama = "^0.4.5"
comtypes = "^1.1.14"
cookiecutter = "^2.1.1"
cryptography = "^37.0.4"
defusedxml = "^0.7.1"
Django = "^4.0.6"
django-allauth = "^0.51.0"
django-browser-reload = "^1.6.0"
django-crispy-forms = "^1.14.0"
django-tailwind = "^3.4.0"
django-upgrade = "^1.9.0"
dotenv-python = "^0.0.1"
easy-thumbnails = "^2.8.3"
html2text = "^2014.12.29"
idna = "^3.3"
Jinja2 = "^3.1.2"
jinja2-time = "^0.2.0"
MarkupSafe = "^2.1.1"
oauthlib = "^3.2.0"
Pillow = "^9.2.0"
pycparser = "^2.21"
PyJWT = "^2.4.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.20.0"
python-slugify = "^6.1.2"
python3-openid = "^3.2.0"
PyYAML = "^6.0"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
six = "^1.16.0"
sqlparse = "^0.4.2"
text-unidecode = "^1.3"
tokenize-rt = "^4.2.1"
tzdata = "^2022.1"
urllib3 = "^1.26.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
